--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -8,20 +8,20 @@
 		<% if @chips %>
 			<div class="scrollx">
 				<div class="flex px-5 w-content md:flex-wrap md:px-0 md:mb-2">
-					<div class="text-sm md:text-base cursor-default c-chip--active mr-3 mb-3">
+					<div class="mr-3 mb-3 text-sm cursor-default md:text-base c-chip--active">
 						Todos os filmes
 					</div>
 					<% if @user&.following_cinemas&.any? %>
 						<% @user.following_cinemas.each do |cinema| %>
 							<%= link_to cinema_path(cinema), 'data-turbo-preserve-scroll': true do %>
-								<div class="c-chip mr-3 mb-3" title="<%= cinema.display_name %>">
+								<div class="mr-3 mb-3 c-chip" title="<%= cinema.display_name %>">
 									<%= helpers.limit_name_size cinema.display_name, 24 %>
 								</div>
 							<% end %>
 						<% end %>
 					<% else %>
 						<%= link_to cinemas_path do %>
-							<div class="text-sm md:text-base c-chip mr-3 mb-3" title="Siga cinemas para vê-los aqui">
+							<div class="mr-3 mb-3 text-sm md:text-base c-chip" title="Siga cinemas para vê-los aqui">
 								Ver cinemas
 								<svg xmlns="http://www.w3.org/2000/svg" class="ml-2 w-4 md:w-5" viewBox="0 0 20 20" fill="currentColor">
 									<path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"/>
@@ -53,6 +53,14 @@
 				<div class="grid grid-flow-col gap-2.5 px-5 md:px-0 w-content grid-after-margin">
 					<% @movies.each do |movie| %>
 						<div class="flex flex-col w-24 transition-transform transform group md:hover:scale-105">
+							<% if movie.rating %>
+								<div class="absolute bg-white flex font-semibold items-center left-0 ml-1 mt-1 p-1 rounded space-x-0.5 text-gray-700 group-hover:text-brand-600 text-xs top-0" title="votação de usuário do IMDB">
+									<span><%= movie.rating %></span>
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-3.5 fill-current" viewBox="0 0 20 20" fill="currentColor">
+										<path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
+									</svg>
+								</div>
+							<% end %>
 							<%= link_to cine_film_path(movie), class: 'flex flex-col', data: { 'turbo-preserve-scroll': true } do %>
 								<%= image_tag helpers.shrine_image_url(movie, :medium), {
 									loading: :lazy,
