--- a/web/app/javascript/stylesheets/_components.scss
+++ b/web/app/javascript/stylesheets/_components.scss
@@ -4,7 +4,11 @@
   }
 
   .c-h3 {
-    @apply text-sm md:text-base font-semibold leading-snug text-gray-800;
+    @apply text-sm font-semibold leading-snug text-gray-800 md:text-base;
+  }
+  
+  .c-h4 {
+    @apply text-xs font-semibold leading-snug text-gray-800 md:text-sm;
   }
 
   .c-span {
