Adjust style in feed and accordion in mobile

--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -17,7 +17,7 @@
 		<% end %>
 		<% unless params[:day] || params[:category] %>
 			<% unless current_user %>
-				<div id="hero__presentation" data-turbo-permanent class="-my-5 flex gap-3 items-center md:bg-transparent md:border-0 md:flex md:flex-row md:items-start md:mx-0 md:my-0 md:px-5 mx-5 rounded-lg select-none tap-highlight-none" style="min-height: <%= mobile_device? ? '110px' : '150px' %>">
+				<div id="hero__presentation" data-turbo-permanent class="-mb-5 flex gap-3 items-center md:bg-transparent md:border-0 md:flex md:flex-row md:items-start md:mx-0 md:my-0 md:px-5 mx-5 rounded-lg select-none tap-highlight-none" style="min-height: <%= mobile_device? ? '110px' : '150px' %>">
 					<div class="md:mr-12">
 						<h2 class="c-h2">
 							Eventos e cinema em Porto Alegre
