--- a/web/app/views/cinemas/index.html.erb
+++ b/web/app/views/cinemas/index.html.erb
@@ -8,7 +8,7 @@
 	<h1 class="c-h2 mb-6">Cinemas de Porto Alegre</h1>
 
 	<div class="gap-5 grid grid-cols-1 justify-self-stretch md:grid-cols-2">
-		<% @cinemas.each do |cinema| %>
+		<% @cinemas.sort_by { |c| c.display_name }.each do |cinema| %>
 			<div class="border p-5 rounded-lg">
 				<div class="grid grid-cols-4">
 					<div class="col-span-3 pr-5 mb-3 text-sm">
