Add content policy and update other terms

--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -26,6 +26,7 @@
 		</a>
 		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/privacy">Política de
 			privacidade</a> ·
-		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/terms">Termos de serviço</a>
+		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/terms">Termos de serviço</a> ·
+		<a href="/content" class="md:hover:text-brand-500 transition-colors duration-150" rel="nofollow">Política de propriedade intelectual</a>
 	</div>
 </section>
