--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -233,7 +233,8 @@
 				Manifesto
 			</a> ·
 			<a href="/privacy" rel="nofollow">Política de privacidade</a> ·
-			<a href="/terms" rel="nofollow">Termos de serviço</a>
+			<a href="/terms" rel="nofollow">Termos de uso</a> ·
+			<a href="/content" rel="nofollow">Política de propriedade intelectual</a>
 		</div>
 	</section>
 
