--- a/web/app/views/pages/content.html
+++ b/web/app/views/pages/content.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="robots" content="noindex">
-	<title>Termos de uso</title>
+	<title>Política de propriedade intelectual</title>
 </head>
 <body>
 <div class="mx-auto min-h-screen max-w-screen-md p-5 shadow-2xl rounded-2xl mb-10 mt-5">
 	<iframe
-		src="https://docs.google.com/document/d/e/2PACX-1vQU4Fh2zQ_bWP6trFwi5mJkNYhtL_PUkWf94OEi8ELhVhgDkLr71HguZVZwv9AttZfXwT6E7OwgAnNO/pub?embedded=true" class="h-screen w-full"></iframe>
+		src="https://docs.google.com/document/d/e/2PACX-1vR3q9zcGIsXsHrAmfS5JDFpU7e6pOXpIuOmemD1ZXrrIKhu0x0InmKAq1PiDYHyuuKlR1TXYwWYyWac/pub?embedded=true" class="h-screen w-full"></iframe>
 </div>
 
 
