--- a/web/app/views/cinemas/show.html.erb
+++ b/web/app/views/cinemas/show.html.erb
@@ -7,22 +7,24 @@
 <%= render(ModalComponent.new) %>
 
 <section class="mx-auto mt-6 max-w-screen-lg min-h-screen px-5 mb-16 space-y-5">
-	<%= link_to root_path, class: 'hidden md:inline-block' do %>
-		<div class="c-chip">
-			<svg xmlns="http://www.w3.org/2000/svg" class="h-5 mr-3 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-  				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-			</svg>
-			<div>Ir para o feed</div>
-		</div>
-	<% end %>
-	<%= link_to cinemas_path, class: '' do %>
-		<div class="c-chip">
-			<svg xmlns="http://www.w3.org/2000/svg" class="h-5 mr-3 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
-			</svg>
-			<div>Ver todos os cinemas em <span class="font-medium">Porto Alegre</span></div>
-		</div>
-	<% end %>
+	<div class="">
+		<%= link_to root_path, class: 'hidden md:inline-block' do %>
+			<div class="c-chip">
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-5 mr-3 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+				</svg>
+				<div>Ir para o feed</div>
+			</div>
+		<% end %>
+		<%= link_to cinemas_path, class: 'md:inline-block' do %>
+			<div class="c-chip">
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-5 mr-3 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
+				</svg>
+				<div>Ver todos os cinemas em <span class="font-medium">Porto Alegre</span></div>
+			</div>
+		<% end %>
+	</div>
 	<div class="grid grid-cols-4">
 		<div class="col-span-3 pr-5 mb-3 text-sm space-y-2">
 			<h1 id="<%= @cinema&.slug %>" class="c-h2 inline">
