--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, id: 'swipable', data: { controller: 'hero--swipable' }, class: 'flex' do %>
+<%= content_tag :div, id: 'swipable', data: { controller: 'hero--swipable' }, class: 'flex select-none tap-highlight-none' do %>
 	<% if @show_swipable %>
 		<div class="flex w-full">
 			<div class="<%= helpers.class_names('md:mx-auto mx-5 md:px-5 w-full',
