--- a/web/app/views/users/registrations/new.html.erb
+++ b/web/app/views/users/registrations/new.html.erb
@@ -35,7 +35,7 @@
 				</div>
 
 				<div class="mt-4 px-5 text-xs">
-					Ao criar um conta você aceita os <%= link_to 'Termos de uso', terms_path, class: 'text-brand-600 underline' %> e <%= link_to 'Política de privacidade', privacy_path, class: 'text-brand-600 underline' %>.
+					Ao criar um conta você aceita os <%= link_to 'Termos de uso', terms_path, class: 'text-brand-600 underline', target: '_blank' %> e <%= link_to 'Política de privacidade', privacy_path, class: 'text-brand-600 underline', target: '_blank' %>.
 				</div>
 
 				<div class="border-b font-black h-1 my-10 text-center"></div>
@@ -76,7 +76,7 @@
 						</div>
 
 						<div class="mt-4 text-xs">
-							Ao criar uma conta você aceita os <%= link_to 'Termos de uso', terms_path, class: 'text-brand-600 underline' %> e <%= link_to 'Política de privacidade', privacy_path, class: 'text-brand-600 underline' %>.
+							Ao criar uma conta você aceita os <%= link_to 'Termos de uso', terms_path, class: 'text-brand-600 underline', target: '_blank' %> e <%= link_to 'Política de privacidade', privacy_path, class: 'text-brand-600 underline', target: '_blank' %>.
 						</div>
 					</div>
 				</div>
