--- a/web/app/components/calendar/horizontal_event_component.html.erb
+++ b/web/app/components/calendar/horizontal_event_component.html.erb
@@ -18,7 +18,7 @@
 				<% end %>
 			<% end %>
 			·
-			<div class="inline text-xs text-gray-500 md:mt-2">
+			<div class="inline text-sm font-light text-gray-500 md:mt-2">
 				<% if @likeable.class == Event %>
 					<%= helpers.day_of_week(@likeable.start_time).titlecase %> às <%= helpers.format_hour @likeable.start_time %>h
 					·
