--- a/web/app/views/components/_bottom-navigation.html.erb
+++ b/web/app/views/components/_bottom-navigation.html.erb
@@ -1,4 +1,5 @@
-<% if !['events', 'users'].include?(controller_name) && action_name != 'show' %>
+<% if ('feeds' == controller_name && action_name != 'show') ||
+	('users' == controller_name) %>
 	<div class="select-none tap-highlight-none fixed bottom-0 z-40 w-full py-2 overflow-hidden transition-transform duration-100 transform bg-white md:hidden md:shadow-none elevation-8 md:sticky md:top-0 ripple ripple-black"
 			 data-controller="ripple bottom-navigation go-to"
 			 data-go-to-delay="100"
@@ -16,7 +17,7 @@
 																	'text-brand-500': ['feeds', 'events'].include?(controller_name),
 																	'text-gray-600':  !['feeds', 'events'].include?(controller_name) %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
 				</svg>
 				Início
 			</div>
@@ -28,31 +29,10 @@
 																	'text-brand-500': current_page?('/minha-agenda'),
 																	'text-gray-600':  !current_page?('/minha-agenda') %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
 				</svg>
 				Agenda
 			</div>
-			<% if current_user %>
-				<div data-toggle-style-target="toggle"
-						 data-action="click->toggle-style#toggle click->go-to#url"
-						 data-toggle-style-identifier="users-profile"
-						 data-go-to-url="<%= current_user ? user_path(current_user) : new_user_registration_path %>"
-						 class="<%= class_names 'justify-between cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
-																		'text-brand-500': current_page?(controller: :users, action: :show, id: current_user),
-																		'text-gray-600':  !current_page?(controller: :users, action: :show, id: current_user) %>">
-					<img src="<%= current_user&.picture :small %>" class="w-5 h-5 rounded-full md:mr-5" alt="<%= current_user&.name %>">
-					Perfil
-				</div>
-			<% else %>
-				<div data-toggle-style-target="toggle"
-						 data-action="click->toggle-style#toggle click->go-to#url"
-						 data-toggle-style-identifier="users-profile"
-						 data-go-to-url="<%= new_user_registration_path %>"
-						 class="justify-between cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100">
-					<div class="w-5 h-5 rounded-full md:mr-5 bg-gray-300"></div>
-					Criar conta
-				</div>
-			<% end %>
 		</div>
 	</div>
 <% end %>
