--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,7 +1,7 @@
 <%= render ModalComponent.new %>
 
 <div id="main-content" class="gap-16 mx-auto max-w-screen-lg md:grid md:grid-cols-8">
-	<section id="main-sidebar" class="col-span-8 pt-6 md:pt-12 space-y-16 md:col-span-5 min-h-screen">
+	<section id="main-sidebar" class="col-span-8 pt-6 md:pt-12 space-y-10 md:space-y-16 md:col-span-5 min-h-screen">
 		<% if notice %>
 			<div class="flex items-center p-3 mx-4 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg border bg-brand-100 border-brand-200 text-brand-600">
 				<div class="flex flex-shrink-0 justify-center items-center w-12 h-12 rounded-full bg-brand-100 sm:h-10 sm:w-10">
@@ -17,7 +17,7 @@
 		<% end %>
 		<% unless params[:day] || params[:category] %>
 			<% unless current_user %>
-				<div id="hero__presentation" data-turbo-permanent class="-mb-5 flex gap-3 items-center md:bg-transparent md:border-0 md:flex md:flex-row md:items-start md:mx-0 md:my-0 md:px-5 mx-5 rounded-lg select-none tap-highlight-none" style="min-height: <%= mobile_device? ? '110px' : '150px' %>">
+				<div id="hero__presentation" data-turbo-permanent class="flex gap-3 inline-flex items-center mb-5 md:bg-transparent md:border-0 md:flex md:flex-row md:items-start md:mx-0 md:my-0 md:px-5 mx-5 rounded-lg select-none tap-highlight-none" style="min-height: <%= mobile_device? ? '110px' : '150px' %>">
 					<div class="md:mr-12">
 						<h2 class="c-h2">
 							Eventos e cinema em Porto Alegre
