--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -18,7 +18,7 @@
 	<div class="grid grid-cols-12 gap-0 mx-auto max-w-screen-lg md:gap-10">
 		<div class="col-span-12 md:col-span-4">
 			<div class="overflow-hidden sticky top-28 mx-auto space-y-3 is-animated md:border md:rounded-lg md:max-w-screen-sm sm:container">
-				<div class="p-6 space-y-5 bg-white rounded-md">
+				<div class="mb-10 md:mb-0 p-6 space-y-5 bg-white rounded-md">
 					<div class="flex items-center space-x-5">
 						<%= image_tag shrine_image_url(@organizer, :sm), {
 							loading: :lazy,
@@ -39,8 +39,8 @@
 			</div>
 		</div>
 		<div class="col-span-12 space-y-12 md:col-span-8">
-			<div class="overflow-hidden mx-auto space-y-3 is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
-				<h2 class="px-5 pb-2 c-h2">Próximos eventos</h2>
+			<div class="border-b md:border-0 overflow-hidden mx-auto space-y-3 is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
+				<h2 class="px-5 md:pb-2 c-h2">Próximos eventos</h2>
 				<% if @upcoming_events.present? %>
 					<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user, pagy: @pagy %>
 				<% else %>
@@ -52,7 +52,7 @@
 
 			<% if @past_events.present? %>
 				<div class="overflow-hidden mx-auto space-y-3 is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
-					<h2 class="px-5 pb-2 c-h2">Eventos passados</h2>
+					<h2 class="px-5 md:pb-2 c-h2">Eventos passados</h2>
 					<div class="grid grid-cols-12 gap-6 px-5">
 						<% @past_events.each do |event| %>
 							<div class="flex col-span-12 justify-between py-3 md:col-span-6 md:border-0">
@@ -64,7 +64,7 @@
 																		url:        event_path(event),
 																		'event-id': event.id
 																	},
-																	class: 'md:hover:underline inline-block md:text-sm font-medium mb-1 leading-snug text-gray-600' do %>
+																	class: 'md:hover:underline inline-block text-sm md:font-medium mb-1 leading-snug text-gray-600' do %>
 										<%= event.name %>
 									<% end %>
 								</div>
@@ -73,7 +73,7 @@
 															action:     'click->main-sidebar--horizontal-event#openEvent',
 															'event-id': event.id
 														},
-														class: 'inline-block flex-shrink-0 cursor-pointer h-16 w-16' do %>
+														class: 'inline-block flex-shrink-0 cursor-pointer w-12 h-12 md:h-16 md:w-16' do %>
 									<%= image_tag shrine_image_url(event, :feed), {
 										loading: :lazy,
 										class:   'h-full object-center object-cover overflow-hidden rounded-lg w-full',
