--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -70,7 +70,8 @@
 									</span>
 							</div>
 						</a>
-					<% end %></div>
+					<% end %>
+				</div>
 				<div class="mx-auto w-11/12 text-sm leading-relaxed text-center text-gray-800 md:text-left md:w-full">
 					<%= @movie.description %>
 				</div>
