--- a/web/app/views/movies/hovercard.html.erb
+++ b/web/app/views/movies/hovercard.html.erb
@@ -1,21 +1,35 @@
 <div class="relative transition-opacity" data-hovercard-target="card" data-action="mouseenter->hovercard#clearTimer mouseleave->hovercard#hide">
-	<div data-tooltip-arrow class="space-y-2 -mx-2 absolute bg-white border bottom-3 left-0 min-w-max-content p-6 rounded-lg shadow-xl z-50">
-		<div class="flex items-center justify-between">
-			<h3 class="c-h3 text-brand-600"><%= @movie.title %></h3>
+	<div data-tooltip-arrow class="fixed bottom-0 left-0 z-50 p-6 mx-0 space-y-2 bg-white rounded-lg rounded-t-xl border md:-mx-2 md:absolute md:bottom-3 min-w-max-content shadow-t-2xl md:shadow-xl">
+		<div class="flex items-start items-center space-x-2 justify-between md:flex-row md:items-center md:mb-0">
+			<h3 class="text-lg c-h3 text-brand-600"><%= @movie.title %></h3>
 			<% if @movie.trailer %>
-				<a href="<%= @movie.trailer %>" rel="nofollow" target="_blank" class="inline-block mt-3 text-center md:mt-0">
-					<div class="flex items-center py-1 px-2 text-gray-600 rounded-full border transition-transform hover:scale-105 md:transform border-brand-300 w-content">
-						<svg xmlns="http://www.w3.org/2000/svg" class="mr-1 w-5 h-5 fill-current text-brand-600" viewBox="0 0 20 20" fill="currentColor">
-							<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"/>
-						</svg>
-						<span class="font-semibold text-brand-600">
-										Ver trailer
-									</span>
-					</div>
+				<a href="<%= @movie.trailer %>" rel="nofollow" target="_blank" class="flex hidden flex-shrink-0 items-center px-1 mt-1 text-sm text-center text-gray-600 rounded-full border transition-transform md:flex md:mt-0 md:text-base md:py-1 md:px-2 hover:scale-105 md:transform border-brand-300 w-content">
+					<svg xmlns="http://www.w3.org/2000/svg" class="mr-1 w-4 fill-current md:w-5 text-brand-600" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"/>
+					</svg>
+					<span class="font-medium md:font-semibold text-brand-600">
+							Ver trailer
+					</span>
 				</a>
 			<% end %>
+			<div data-action="click->hovercard#hide" class="inline-block md:hidden rounded-full">
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+					<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+				</svg>
+			</div>
 		</div>
-		<div class="px-6 text-xs md:px-0">
+		<div class="flex flex-row space-x-2 md:hidden">
+			<a href="<%= @movie.trailer %>" rel="nofollow" target="_blank" class="c-chip">
+				Ver trailer
+			</a>
+			<a href="<%= cine_film_path(@movie) %>" class="c-chip">
+				Ver horários
+				<svg xmlns="http://www.w3.org/2000/svg" class="ml-1 w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
+					<path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+				</svg>
+			</a>
+		</div>
+		<div class="text-xs">
 			<div class="space-x-1">
 				<%= tag.span @movie.age_rating, class: 'border border-gray-700 font-medium px-1 rounded-sm text-gray-800 text-xxs' if @movie.age_rating? %>
 				<%= tag.span @movie&.genres&.join(', ') if @movie.genres? %>
@@ -26,7 +40,7 @@
 				<span class="font-medium">Elenco:</span> <%= @movie&.cast&.join(', ') %>
 			<% end if @movie&.cast? %>
 		</div>
-		<div class="text-sm">
+		<div class="text-xs md:text-sm">
 			<%= @movie.description %>
 		</div>
 	</div>
