Redirect top app bar user account icon in mobile to signup

--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -66,7 +66,7 @@
 			<% end %>
 		</div>
 		<% if !current_user && controller_name == 'feeds' %>
-			<%= link_to new_user_session_path, class: 'md:hidden my-auto w-8' do %>
+			<%= link_to new_user_registration_path, class: 'md:hidden my-auto w-8' do %>
 				<svg class="float-right w-6 text-gray-800 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
 				</svg>
