--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -218,7 +218,7 @@
 			</div>
 		</div>
 
-		<%= link_to category_events_path(@event&.categories_url), class: 'bg-white border cursor-pointer inline-block md:hover:bg-brand-100 md:hover:text-brand-600 mx-5 overflow-hidden rounded-lg space-y-3' do %>
+		<%= link_to category_events_path(@event&.categories_url), class: 'bg-white cursor-pointer inline-block md:hover:bg-brand-100 md:hover:text-brand-600 overflow-hidden rounded-lg space-y-3' do %>
 			<div class="flex justify-between items-center p-5 pb-0">
 				<h2 class="text-xl font-bold rounded-lg font-display">
 					<%= @event&.categories_display_name %>
